# cupid

./: Cargo.toml
core/: Cargo.toml
core/examples/: broadcasting_demo.rs  performance_comparison.rs  sandbox.rs  type_system_demo.rs  typesystem.rs
core/src/: context.rs  lambdas.rs  lib.rs  value.rs
core/src/actor/: README.md
core/src/core/: execution_context.rs  host.rs  instruction.rs  mod.rs  variable.rs
core/src/lang/: mod.rs  parse_tree.rs
core/src/lang/invokable/: mod.rs  operator.rs  unary.rs
core/src/lang/type_system/: atom.rs  list.rs  mod.rs  super_type.rs
core/src/lang/type_system/inner_types/: mod.rs  type_bool.rs  type_byte.rs  type_char.rs  type_float.rs  type_int.rs  type_mixed_list.rs  type_operator.rs
core/src/operators/: add.rs  mod.rs
core/src/sandbox/: execution_context.rs  host.rs  instruction.rs  variable.rs
core/src/type_system/: README.md  atom.rs  list.rs  mod.rs  operators.rs  super_type.rs
core/src/type_system/inner_types/: mod.rs  type_bool.rs  type_byte.rs  type_char.rs  type_float.rs  type_floats.rs  type_int.rs  type_ints.rs  type_mixed_list.rs
macros/: Cargo.toml
macros/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
shell/: Cargo.toml
shell/src/: main.rs
